2007-03-25  dima  <dima.exe@gmail.com>

	* rails-core.el (rails-core:add-to-rails-menubar): removed
	(rails-core:mailer-file): maked as alias
	(rails-core:controller-name): renamed from rails-core:full-controller-name
	(rails-core:regex-for-match-view): cleanup

	* rails-find.el: created

	* rails-navigation.el: moved rails-find-* to separate file rails-find.el

	* rails.el (rails-find-file-function): removed variable

	* rails-ui.el (rails-minor-mode-menu-bar-map): update indentation

	* rails-scripts.el: refactored code

2007-03-24  dima  <dima.exe@gmail.com>

	* rails-unit-test-minor-mode.el (rails-unit-test-minor-mode): fixed

	* rails-navigation.el (rails-line-->controller+action): replace
	call rails-core:open-controller+action to
	rails-controller-layout:switch-to-action-in-controller

	* rails-snippets.el (snippet-insert): added advice
	(rails-snippets-menu-list): updated snippets

	* rails-ws.el (rails-ws:sentinel-proc): change format of the message
	(rails-ws:start): fixed

	* rails-navigation.el: removed old style goto-* functions

	* rails.el (ruby-mode-hook): bind ruby-toggle-string<>symbol to [C-:] in ruby mode

	* rails-ui.el (rails-minor-mode-map): added [M-S-up] & [M-S-down] hotkeys

	* rails-snippets.el (rails-snippets-menu-list): updated, split snippets to separate modes

	* rails-ruby.el (ruby-toggle-string<>simbol): created

	* rails-migration-minor-mode.el (rails-migration-minor-mode): created

2007-03-23  dima  <dima.exe@gmail.com>

	* rails.el (ruby-mode-hook): added [C-:] hotkey to easy switch between strings and symbols

	* rails-ruby.el (ruby-toggle-string<>simbol): created

	* rails.el (ruby-mode-hook): added [C-c f] hotkey to popup `major-menu-mode` menu

	* rails-core.el (rails-core:menu-position): created variable
	(rails-core:menu): using `rails-core:menu-position`

	* rails-snippets.el (rails-snippets-menu-list): splited snippets into separate modes

	* rails-navigation.el (rails-nav:goto-fixtures): created
